// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`next-steps on internal should show the "Order flood risk data" for opted out areas on internal 1`] = `
"<!DOCTYPE html>
<html lang="en" class="govuk-template">
  <head>
    <meta charset="utf-8">
    <title>
  Next steps for your planning application - Flood map for planning - GOV.UK
</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
    <meta name="theme-color" content="#0b0c0c">

    
      <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico">
      <link rel="icon" sizes="any" href="/assets/images/favicon.svg" type="image/svg+xml">
      <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c">
      <link rel="apple-touch-icon" href="/assets/images/govuk-icon-180.png">
      <link rel="manifest" href="/assets/manifest.json">
    

    
  <meta property="fb:app_id" content="replace_this"/>
  <meta property="og:type" content="website"/>
  <meta property="og:url" content="http://dummyuri/next-steps?polygon=%5B%5B9323,1323%5D,%5B9323,1324%5D,%5B9324,1324%5D,%5B9324,1323%5D,%5B9323,1323%5D%5D"/>
  <meta property="og:title" content="Next steps for your planning application - Flood map for planning - GOV.UK"/>
  <meta property="og:description" content="Get flood risk information and maps for planning applications and planning permission in England, including flood zones and flood risk assessment data."/>
  <meta property="keywords" content="flood,mapfor,planning,service,gov,uk"/>
  <meta property="description" content="Get flood risk information and maps for planning applications and planning permission in England, including flood zones and flood risk assessment data."/>
  <meta name="google-site-verification" content="hjukuejt64a0rbduxxtbniknb4_cz3x3hlxoxk4_ox8"/>
  
    <meta name="robots" content="noindex"/>
  
  <link href="/assets/application.css" rel="stylesheet"/>

    
  </head>
  <body class="govuk-template__body">
    <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
    
  




<div class="govuk-cookie-banner js-cookies-banner govuk-!-display-none" data-nosnippet role="region" aria-label="Cookies on Flood Map For Planning">
  
  <div class="govuk-cookie-banner__message js-question-banner govuk-width-container" hidden>

    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds">
        
        <h2 class="govuk-cookie-banner__heading govuk-heading-m">
          Cookies on Flood Map For Planning
        </h2>
        
        <div class="govuk-cookie-banner__content">
          
          <p class="govuk-body">We use analytics cookies to help understand how users use our service.</p>
          
        </div>
      </div>
    </div>

    
    <div class="govuk-button-group">
    
      
      <button type="button" class="govuk-button js-cookies-button-accept" data-module="govuk-button">
        Accept analytics cookies
      </button>
    
      
      <button type="button" class="govuk-button js-cookies-button-reject" data-module="govuk-button">
        Reject analytics cookies
      </button>
    
      
      <a class="govuk-link" href="cookies">View cookie preferences</a>
    
    </div>
    

  </div>
  
  <div class="govuk-cookie-banner__message js-cookies-accepted govuk-width-container" role="alert" hidden>

    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds">
        
        <div class="govuk-cookie-banner__content">
          
          <p class="govuk-body">You've accepted analytics cookies. You can <a href="/cookies">change your cookie settings</a> at any time.</p>
          
        </div>
      </div>
    </div>

    
    <div class="govuk-button-group">
    
      
      <button type="button" class="govuk-button" data-module="govuk-button">
        Hide cookie message
      </button>
    
    </div>
    

  </div>
  
  <div class="govuk-cookie-banner__message js-cookies-rejected govuk-width-container" role="alert" hidden>

    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds">
        
        <div class="govuk-cookie-banner__content">
          
          <p class="govuk-body">You've rejected analytics cookies. You can <a href="/cookies">change your cookie settings</a> at any time.</p>
          
        </div>
      </div>
    </div>

    
    <div class="govuk-button-group">
    
      
      <button type="button" class="govuk-button" data-module="govuk-button">
        Hide cookie message
      </button>
    
    </div>
    

  </div>
  
</div>




    
      <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>

    

    
  <header class="govuk-header" data-module="govuk-header">
  <div class="govuk-header__container govuk-width-container">
    <div class="govuk-header__logo">
      <a href="https://www.gov.uk/" class="govuk-header__link govuk-header__link--homepage">
        <svg
          focusable="false"
          role="img"
          class="govuk-header__logotype"
          xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 148 30"
          height="30"
          width="148"
          aria-label="GOV.UK"
        >
          <title>GOV.UK</title>
          <path d="M22.6 10.4c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4m-5.9 6.7c-.9.4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4m10.8-3.7c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s0 2-1 2.4m3.3 4.8c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4M17 4.7l2.3 1.2V2.5l-2.3.7-.2-.2.9-3h-3.4l.9 3-.2.2c-.1.1-2.3-.7-2.3-.7v3.4L15 4.7c.1.1.1.2.2.2l-1.3 4c-.1.2-.1.4-.1.6 0 1.1.8 2 1.9 2.2h.7c1-.2 1.9-1.1 1.9-2.1 0-.2 0-.4-.1-.6l-1.3-4c-.1-.2 0-.2.1-.3m-7.6 5.7c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s0 2 1 2.4m-5 3c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s.1 2 1 2.4m-3.2 4.8c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s0 2 1 2.4m14.8 11c4.4 0 8.6.3 12.3.8 1.1-4.5 2.4-7 3.7-8.8l-2.5-.9c.2 1.3.3 1.9 0 2.7-.4-.4-.8-1.1-1.1-2.3l-1.2 4c.7-.5 1.3-.8 2-.9-1.1 2.5-2.6 3.1-3.5 3-1.1-.2-1.7-1.2-1.5-2.1.3-1.2 1.5-1.5 2.1-.1 1.1-2.3-.8-3-2-2.3 1.9-1.9 2.1-3.5.6-5.6-2.1 1.6-2.1 3.2-1.2 5.5-1.2-1.4-3.2-.6-2.5 1.6.9-1.4 2.1-.5 1.9.8-.2 1.1-1.7 2.1-3.5 1.9-2.7-.2-2.9-2.1-2.9-3.6.7-.1 1.9.5 2.9 1.9l.4-4.3c-1.1 1.1-2.1 1.4-3.2 1.4.4-1.2 2.1-3 2.1-3h-5.4s1.7 1.9 2.1 3c-1.1 0-2.1-.2-3.2-1.4l.4 4.3c1-1.4 2.2-2 2.9-1.9-.1 1.5-.2 3.4-2.9 3.6-1.9.2-3.4-.8-3.5-1.9-.2-1.3 1-2.2 1.9-.8.7-2.3-1.2-3-2.5-1.6.9-2.2.9-3.9-1.2-5.5-1.5 2-1.3 3.7.6 5.6-1.2-.7-3.1 0-2 2.3.6-1.4 1.8-1.1 2.1.1.2.9-.3 1.9-1.5 2.1-.9.2-2.4-.5-3.5-3 .6 0 1.2.3 2 .9l-1.2-4c-.3 1.1-.7 1.9-1.1 2.3-.3-.8-.2-1.4 0-2.7l-2.9.9C1.3 23 2.6 25.5 3.7 30c3.7-.5 7.9-.8 12.3-.8m28.3-11.6c0 .9.1 1.7.3 2.5.2.8.6 1.5 1 2.2.5.6 1 1.1 1.7 1.5.7.4 1.5.6 2.5.6.9 0 1.7-.1 2.3-.4s1.1-.7 1.5-1.1c.4-.4.6-.9.8-1.5.1-.5.2-1 .2-1.5v-.2h-5.3v-3.2h9.4V28H55v-2.5c-.3.4-.6.8-1 1.1-.4.3-.8.6-1.3.9-.5.2-1 .4-1.6.6s-1.2.2-1.8.2c-1.5 0-2.9-.3-4-.8-1.2-.6-2.2-1.3-3-2.3-.8-1-1.4-2.1-1.8-3.4-.3-1.4-.5-2.8-.5-4.3s.2-2.9.7-4.2c.5-1.3 1.1-2.4 2-3.4.9-1 1.9-1.7 3.1-2.3 1.2-.6 2.6-.8 4.1-.8 1 0 1.9.1 2.8.3.9.2 1.7.6 2.4 1s1.4.9 1.9 1.5c.6.6 1 1.3 1.4 2l-3.7 2.1c-.2-.4-.5-.9-.8-1.2-.3-.4-.6-.7-1-1-.4-.3-.8-.5-1.3-.7-.5-.2-1.1-.2-1.7-.2-1 0-1.8.2-2.5.6-.7.4-1.3.9-1.7 1.5-.5.6-.8 1.4-1 2.2-.3.8-.4 1.9-.4 2.7zM71.5 6.8c1.5 0 2.9.3 4.2.8 1.2.6 2.3 1.3 3.1 2.3.9 1 1.5 2.1 2 3.4s.7 2.7.7 4.2-.2 2.9-.7 4.2c-.4 1.3-1.1 2.4-2 3.4-.9 1-1.9 1.7-3.1 2.3-1.2.6-2.6.8-4.2.8s-2.9-.3-4.2-.8c-1.2-.6-2.3-1.3-3.1-2.3-.9-1-1.5-2.1-2-3.4-.4-1.3-.7-2.7-.7-4.2s.2-2.9.7-4.2c.4-1.3 1.1-2.4 2-3.4.9-1 1.9-1.7 3.1-2.3 1.2-.5 2.6-.8 4.2-.8zm0 17.6c.9 0 1.7-.2 2.4-.5s1.3-.8 1.7-1.4c.5-.6.8-1.3 1.1-2.2.2-.8.4-1.7.4-2.7v-.1c0-1-.1-1.9-.4-2.7-.2-.8-.6-1.6-1.1-2.2-.5-.6-1.1-1.1-1.7-1.4-.7-.3-1.5-.5-2.4-.5s-1.7.2-2.4.5-1.3.8-1.7 1.4c-.5.6-.8 1.3-1.1 2.2-.2.8-.4 1.7-.4 2.7v.1c0 1 .1 1.9.4 2.7.2.8.6 1.6 1.1 2.2.5.6 1.1 1.1 1.7 1.4.6.3 1.4.5 2.4.5zM88.9 28 83 7h4.7l4 15.7h.1l4-15.7h4.7l-5.9 21h-5.7zm28.8-3.6c.6 0 1.2-.1 1.7-.3.5-.2 1-.4 1.4-.8.4-.4.7-.8.9-1.4.2-.6.3-1.2.3-2v-13h4.1v13.6c0 1.2-.2 2.2-.6 3.1s-1 1.7-1.8 2.4c-.7.7-1.6 1.2-2.7 1.5-1 .4-2.2.5-3.4.5-1.2 0-2.4-.2-3.4-.5-1-.4-1.9-.9-2.7-1.5-.8-.7-1.3-1.5-1.8-2.4-.4-.9-.6-2-.6-3.1V6.9h4.2v13c0 .8.1 1.4.3 2 .2.6.5 1 .9 1.4.4.4.8.6 1.4.8.6.2 1.1.3 1.8.3zm13-17.4h4.2v9.1l7.4-9.1h5.2l-7.2 8.4L148 28h-4.9l-5.5-9.4-2.7 3V28h-4.2V7zm-27.6 16.1c-1.5 0-2.7 1.2-2.7 2.7s1.2 2.7 2.7 2.7 2.7-1.2 2.7-2.7-1.2-2.7-2.7-2.7z"></path>
        </svg>
        
      </a>
    </div>
  
    <div class="govuk-header__content">
    
      
      <a href="/" class="govuk-header__link govuk-header__service-name">
        Flood map for planning
      </a>
      
    
    
    </div>
  
  </div>
</header>



<div class="govuk-phase-banner govuk-width-container">
  <p class="govuk-phase-banner__content">
    <strong class="govuk-tag govuk-phase-banner__content__tag">
      Beta
    </strong>
    <span class="govuk-phase-banner__text">
      This is a new service. Help us improve it and <a class="govuk-link" href="/feedback">give your feedback</a>.
    </span>
  </p>
</div>




    
      <div class="govuk-width-container">
        
  <a href="javascript:history.back()" class="govuk-back-link">Back</a>


        <main class="govuk-main-wrapper" id="main-content">
          
  <div class="govuk-grid-row">
    <div class="govuk-grid-column-three-quarters">
      <h1 class="govuk-heading-xl">
        Next steps for your planning application
      </h1>
      <h3 class="govuk-heading-m">
        Decide what you need for your planning application
      </h3>
      <p class="govuk-body">
        Contact your local planning authority to check their requirements.
      </p>
      <p class="govuk-body">
        Your local planning authority is Bath and North East Somerset
      </p>
      <p class="govuk-body">
        Get a Flood Risk Assessment (FRA). You will normally need to pay a flood risk specialist to carry it out.
      </p>
      <p class="govuk-body">
        For developments in flood zone 3 your FRA should include an assessment of all sources of
        flooding and <a class="govuk-link" href="https://www.gov.uk/guidance/flood-risk-assessments-climate-change-allowances">take into account climate change allowances</a>.
      </p>
      <p class="govuk-body">
        Find out <a class="govuk-link" href="https://www.gov.uk/guidance/flood-risk-assessment-for-planning-applications">how to do an assessment</a>.
      </p>
      <p class="govuk-body">
        Find out more about <a class="govuk-link" href="/flood-zone-results-explained">flood zones and what they mean</a>
      </p>
      
      <p class="govuk-body">
        When using the surface water map on the
        <a class="govuk-link" href="https://check-long-term-flood-risk.service.gov.uk/map?easting=9323.5&northing=1323.5&map=SurfaceWater">
          check your long term flood risk service
        </a>
        the following considerations apply:
      </p>

      <ul class="govuk-list govuk-list--bullet">
        <li>
          surface water extents are suitable for use in planning
        </li>
        <li>
          surface water climate change scenarios may help to inform risk assessments, 
          but the available data fall short of what is required to assess planned development 
        </li>
        <li>
          surface water depth information should not be used for planning purposes
        </li>
      </ul>

      <p class="govuk-body">
        To find out about other factors that might affect the flood risk of this location, you should also check:
      </p>

      <ul class="govuk-list govuk-list--bullet">
        <li>
          <a class="govuk-link" href="https://check-long-term-flood-risk.service.gov.uk/map?easting=9323.5&northing=1323.5&map=Reservoirs">
            reservoir flood risk
          </a>
        </li>
        <li>
          groundwater flood risk - you could use the
          <a class="govuk-link" href="https://www.bgs.ac.uk/datasets/groundwater-flooding/">
            British Geological Survey groundwater flooding data
          </a>,
          <a class="govuk-link" href="https://www.gov.uk/government/collections/groundwater-current-status-and-flood-risk">
            groundwater: current status and flood risk
          </a>
          and the guide on
          <a class="govuk-link" href="https://www.gov.uk/guidance/mining-and-groundwater-constraints-for-development">
            mining and groundwater constraints for development
          </a>
          - further information may be available from the lead local flood authority (LLFA) and your
          local planning authority's strategic flood risk assessment (SFRA)
        </li>
        <li>
          your local planning authority's strategic flood risk assessment (SFRA), which includes future flood risk.
        </li>
      </ul>

      <h3 class="govuk-heading-m">
        Other data you may need
      </h3>

      <p class="govuk-body">You will also need to assess <a
          href="https://www.gov.uk/guidance/flood-risk-and-coastal-change#para41">residual
          risk</a> from flood defence breach in this location.
          If available, we will provide breach hazard mapping data to help you do this. 
      </p>

      <h3 class="govuk-heading-m">
        Get help
      </h3>

      <p class="govuk-body">
        For help deciding what flood risk information you need, 
        email the Environment Agency team in Wessex at
        <a class="govuk-link" href="mailto:wessexenquiries@environment-agency.gov.uk">wessexenquiries@environment-agency.gov.uk</a>
      </p>

      <h3 class="govuk-heading-m">
        Download a flood map for this location
      </h3>

      
  <details class="govuk-details govuk-!-margin-bottom-1" data-module="govuk-details"
    data-journey-click="Flood-Zone-Results:DETAIL-CLICK:Add-A-Reference">
    <summary class="govuk-details__summary">
      <span class="govuk-details__summary-text">
        Add a reference to the flood map and set the scale
      </span>
    </summary>
    <div class="govuk-details__text">
      <form class="form" id="product-1-form" method="POST" action="product-1">
        <input name="polygon" type="hidden" value="[[9323,1323],[9323,1324],[9324,1324],[9324,1323],[9323,1323]]" />
        <input name="isRiskAdminArea" type="hidden" value="false" />
        <input name="floodZone" type="hidden" value="3" />

          <div class="govuk-form-group">
            <h3 class="govuk-label-wrapper">
              <label class="govuk-label--m" for="reference">
                Add a reference
              </label>
              <span class="govuk-hint govuk-hint--block">
                Optional. This is chosen by you to help you find the report
                later and should be less than 25 characters.
              </span>
            </h3>
            <input class="govuk-input form-control govuk-input--width-20" id="reference" name="reference" type="text" maxlength="25" />
          </div>

          <div class="govuk-form-group">
            <h3 class="govuk-label-wrapper">
              <label class="govuk-label--m" for="scale"> Scale </label>
              <span class="govuk-hint govuk-hint--block">
                Select the scale of the map shown in the report
              </span>
            </h3>
            <select class="govuk-select" id="scale" name="scale">
              <option value="2500">1:2500</option>
              <option value="10000">1:10000</option>
              <option value="25000">1:25000</option>
              <option value="50000">1:50000</option>
            </select>
          </div>
        </form>
      </div>
    </details>
    <button href="#" form="product-1-form" id="product-1-button" type="submit" class="govuk-button govuk-button--secondary" draggable="false">
      Download flood map for this location (PDF)
    </button>
  

      <h3 class="govuk-heading-m">
        Order flood risk data for rivers and the sea
      </h3>

      
  <p class="govuk-body">Order detailed flood risk information to be used for a flood risk assessment as part of a planning application.</p>
  
  <br>
  <a href="contact?polygon=[[9323,1323],[9323,1324],[9324,1324],[9324,1323],[9323,1323]]" class="govuk-button" data-module="govuk-button" data-testid="order-product4">
    Order flood risk data
  </a>

    </div>
  </div>

        </main>
      </div>
    

    
  

<footer class="govuk-footer">
  <div class="govuk-width-container">
    
    <div class="govuk-footer__meta">
      <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
        
        <h2 class="govuk-visually-hidden">Support links</h2>
        
        <ul class="govuk-footer__inline-list">
        
          <li class="govuk-footer__inline-list-item">
            <a class="govuk-footer__link" href="/cookies">
              Cookies
            </a>
          </li>
        
          <li class="govuk-footer__inline-list-item">
            <a class="govuk-footer__link" href="/accessibility-statement">
              Accessibility
            </a>
          </li>
        
          <li class="govuk-footer__inline-list-item">
            <a class="govuk-footer__link" href="/terms-and-conditions">
              Terms and conditions
            </a>
          </li>
        
          <li class="govuk-footer__inline-list-item">
            <a class="govuk-footer__link" href="/privacy-notice">
              Privacy notice
            </a>
          </li>
        
        </ul>
        
        
        <div class="govuk-footer__meta-custom">
          <p class="govuk-body-s">
              Built by the
              <a href="https://www.gov.uk/government/organisations/environment-agency">Environment Agency</a>
            </p>
            <p class="govuk-body-s" style="max-width: 70ch;">
              © Crown copyright and database rights 2025
              <a href = "https://www.ordnancesurvey.co.uk/">Ordnance Survey(OS)</a>
              AC0000807064. Use of the address and mapping data is subject to the
                <a href="/os-terms">Ordnance Survey terms and conditions</a>.
            </p>
        </div>
        
        
        <svg
          aria-hidden="true"
          focusable="false"
          class="govuk-footer__licence-logo"
          xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 483.2 195.7"
          height="17"
          width="41"
        >
          <path
            fill="currentColor"
            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
          />
        </svg>
        <span class="govuk-footer__licence-description">
        
          All content is available under the
          <a
            class="govuk-footer__link"
            href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
            rel="license"
          >Open Government Licence v3.0</a>, except where otherwise stated
        
        </span>
      </div>
      <div class="govuk-footer__meta-item">
        <a
          class="govuk-footer__link govuk-footer__copyright-logo"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
        >
        
          © Crown copyright
        
        </a>
      </div>
    </div>
  </div>
</footer>




    
  
  
  <script src="/assets/core.js"></script>
  <script type="module">
    import { initAll } from '/assets/govuk-frontend.min.js'
    initAll()
  </script>
  <script type="text/javascript">
    const analyticsAccount = 'replace_this'
    const analyticsAccepted = Boolean(document.cookie.match('GA=Accept'))

    if (analyticsAccount && analyticsAccepted) {
      const script = document.createElement('script')
      script.src = \`https://www.googletagmanager.com/gtm.js?id=\${analyticsAccount}\`
      script.onload = () => {
        window.dataLayer = window.dataLayer || []
        function gtag () { window.dataLayer.push(arguments) }
        gtag('consent', 'default', {
          ad_storage: 'granted',
          ad_personalization: 'granted',
          ad_user_data: 'granted',
          analytics_storage: 'granted'
        })
        window.dataLayer.push({
          'gtm.start': new Date().getTime(),
          event: 'gtm.js'
        })
      }
      document.body.appendChild(script)
    }
  </script>

  <script src="/assets/product-1-spinner.js"></script>

  </body>
</html>
"
`;

exports[`next-steps on public should show the "Order flood risk data" for opted out areas on internal 1`] = `
"<!DOCTYPE html>
<html lang="en" class="govuk-template">
  <head>
    <meta charset="utf-8">
    <title>
  Next steps for your planning application - Flood map for planning - GOV.UK
</title>
    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
    <meta name="theme-color" content="#0b0c0c">

    
      <link rel="icon" sizes="48x48" href="/assets/images/favicon.ico">
      <link rel="icon" sizes="any" href="/assets/images/favicon.svg" type="image/svg+xml">
      <link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c">
      <link rel="apple-touch-icon" href="/assets/images/govuk-icon-180.png">
      <link rel="manifest" href="/assets/manifest.json">
    

    
  <meta property="fb:app_id" content="replace_this"/>
  <meta property="og:type" content="website"/>
  <meta property="og:url" content="http://dummyuri/next-steps?polygon=%5B%5B9323,1323%5D,%5B9323,1324%5D,%5B9324,1324%5D,%5B9324,1323%5D,%5B9323,1323%5D%5D"/>
  <meta property="og:title" content="Next steps for your planning application - Flood map for planning - GOV.UK"/>
  <meta property="og:description" content="Get flood risk information and maps for planning applications and planning permission in England, including flood zones and flood risk assessment data."/>
  <meta property="keywords" content="flood,mapfor,planning,service,gov,uk"/>
  <meta property="description" content="Get flood risk information and maps for planning applications and planning permission in England, including flood zones and flood risk assessment data."/>
  <meta name="google-site-verification" content="hjukuejt64a0rbduxxtbniknb4_cz3x3hlxoxk4_ox8"/>
  
    <meta name="robots" content="noindex"/>
  
  <link href="/assets/application.css" rel="stylesheet"/>

    
  </head>
  <body class="govuk-template__body">
    <script>document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script>
    
  




<div class="govuk-cookie-banner js-cookies-banner govuk-!-display-none" data-nosnippet role="region" aria-label="Cookies on Flood Map For Planning">
  
  <div class="govuk-cookie-banner__message js-question-banner govuk-width-container" hidden>

    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds">
        
        <h2 class="govuk-cookie-banner__heading govuk-heading-m">
          Cookies on Flood Map For Planning
        </h2>
        
        <div class="govuk-cookie-banner__content">
          
          <p class="govuk-body">We use analytics cookies to help understand how users use our service.</p>
          
        </div>
      </div>
    </div>

    
    <div class="govuk-button-group">
    
      
      <button type="button" class="govuk-button js-cookies-button-accept" data-module="govuk-button">
        Accept analytics cookies
      </button>
    
      
      <button type="button" class="govuk-button js-cookies-button-reject" data-module="govuk-button">
        Reject analytics cookies
      </button>
    
      
      <a class="govuk-link" href="cookies">View cookie preferences</a>
    
    </div>
    

  </div>
  
  <div class="govuk-cookie-banner__message js-cookies-accepted govuk-width-container" role="alert" hidden>

    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds">
        
        <div class="govuk-cookie-banner__content">
          
          <p class="govuk-body">You've accepted analytics cookies. You can <a href="/cookies">change your cookie settings</a> at any time.</p>
          
        </div>
      </div>
    </div>

    
    <div class="govuk-button-group">
    
      
      <button type="button" class="govuk-button" data-module="govuk-button">
        Hide cookie message
      </button>
    
    </div>
    

  </div>
  
  <div class="govuk-cookie-banner__message js-cookies-rejected govuk-width-container" role="alert" hidden>

    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds">
        
        <div class="govuk-cookie-banner__content">
          
          <p class="govuk-body">You've rejected analytics cookies. You can <a href="/cookies">change your cookie settings</a> at any time.</p>
          
        </div>
      </div>
    </div>

    
    <div class="govuk-button-group">
    
      
      <button type="button" class="govuk-button" data-module="govuk-button">
        Hide cookie message
      </button>
    
    </div>
    

  </div>
  
</div>




    
      <a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>

    

    
  <header class="govuk-header" data-module="govuk-header">
  <div class="govuk-header__container govuk-width-container">
    <div class="govuk-header__logo">
      <a href="https://www.gov.uk/" class="govuk-header__link govuk-header__link--homepage">
        <svg
          focusable="false"
          role="img"
          class="govuk-header__logotype"
          xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 148 30"
          height="30"
          width="148"
          aria-label="GOV.UK"
        >
          <title>GOV.UK</title>
          <path d="M22.6 10.4c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4m-5.9 6.7c-.9.4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4m10.8-3.7c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s0 2-1 2.4m3.3 4.8c-1 .4-2-.1-2.4-1-.4-.9.1-2 1-2.4.9-.4 2 .1 2.4 1s-.1 2-1 2.4M17 4.7l2.3 1.2V2.5l-2.3.7-.2-.2.9-3h-3.4l.9 3-.2.2c-.1.1-2.3-.7-2.3-.7v3.4L15 4.7c.1.1.1.2.2.2l-1.3 4c-.1.2-.1.4-.1.6 0 1.1.8 2 1.9 2.2h.7c1-.2 1.9-1.1 1.9-2.1 0-.2 0-.4-.1-.6l-1.3-4c-.1-.2 0-.2.1-.3m-7.6 5.7c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s0 2 1 2.4m-5 3c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s.1 2 1 2.4m-3.2 4.8c.9.4 2-.1 2.4-1 .4-.9-.1-2-1-2.4-.9-.4-2 .1-2.4 1s0 2 1 2.4m14.8 11c4.4 0 8.6.3 12.3.8 1.1-4.5 2.4-7 3.7-8.8l-2.5-.9c.2 1.3.3 1.9 0 2.7-.4-.4-.8-1.1-1.1-2.3l-1.2 4c.7-.5 1.3-.8 2-.9-1.1 2.5-2.6 3.1-3.5 3-1.1-.2-1.7-1.2-1.5-2.1.3-1.2 1.5-1.5 2.1-.1 1.1-2.3-.8-3-2-2.3 1.9-1.9 2.1-3.5.6-5.6-2.1 1.6-2.1 3.2-1.2 5.5-1.2-1.4-3.2-.6-2.5 1.6.9-1.4 2.1-.5 1.9.8-.2 1.1-1.7 2.1-3.5 1.9-2.7-.2-2.9-2.1-2.9-3.6.7-.1 1.9.5 2.9 1.9l.4-4.3c-1.1 1.1-2.1 1.4-3.2 1.4.4-1.2 2.1-3 2.1-3h-5.4s1.7 1.9 2.1 3c-1.1 0-2.1-.2-3.2-1.4l.4 4.3c1-1.4 2.2-2 2.9-1.9-.1 1.5-.2 3.4-2.9 3.6-1.9.2-3.4-.8-3.5-1.9-.2-1.3 1-2.2 1.9-.8.7-2.3-1.2-3-2.5-1.6.9-2.2.9-3.9-1.2-5.5-1.5 2-1.3 3.7.6 5.6-1.2-.7-3.1 0-2 2.3.6-1.4 1.8-1.1 2.1.1.2.9-.3 1.9-1.5 2.1-.9.2-2.4-.5-3.5-3 .6 0 1.2.3 2 .9l-1.2-4c-.3 1.1-.7 1.9-1.1 2.3-.3-.8-.2-1.4 0-2.7l-2.9.9C1.3 23 2.6 25.5 3.7 30c3.7-.5 7.9-.8 12.3-.8m28.3-11.6c0 .9.1 1.7.3 2.5.2.8.6 1.5 1 2.2.5.6 1 1.1 1.7 1.5.7.4 1.5.6 2.5.6.9 0 1.7-.1 2.3-.4s1.1-.7 1.5-1.1c.4-.4.6-.9.8-1.5.1-.5.2-1 .2-1.5v-.2h-5.3v-3.2h9.4V28H55v-2.5c-.3.4-.6.8-1 1.1-.4.3-.8.6-1.3.9-.5.2-1 .4-1.6.6s-1.2.2-1.8.2c-1.5 0-2.9-.3-4-.8-1.2-.6-2.2-1.3-3-2.3-.8-1-1.4-2.1-1.8-3.4-.3-1.4-.5-2.8-.5-4.3s.2-2.9.7-4.2c.5-1.3 1.1-2.4 2-3.4.9-1 1.9-1.7 3.1-2.3 1.2-.6 2.6-.8 4.1-.8 1 0 1.9.1 2.8.3.9.2 1.7.6 2.4 1s1.4.9 1.9 1.5c.6.6 1 1.3 1.4 2l-3.7 2.1c-.2-.4-.5-.9-.8-1.2-.3-.4-.6-.7-1-1-.4-.3-.8-.5-1.3-.7-.5-.2-1.1-.2-1.7-.2-1 0-1.8.2-2.5.6-.7.4-1.3.9-1.7 1.5-.5.6-.8 1.4-1 2.2-.3.8-.4 1.9-.4 2.7zM71.5 6.8c1.5 0 2.9.3 4.2.8 1.2.6 2.3 1.3 3.1 2.3.9 1 1.5 2.1 2 3.4s.7 2.7.7 4.2-.2 2.9-.7 4.2c-.4 1.3-1.1 2.4-2 3.4-.9 1-1.9 1.7-3.1 2.3-1.2.6-2.6.8-4.2.8s-2.9-.3-4.2-.8c-1.2-.6-2.3-1.3-3.1-2.3-.9-1-1.5-2.1-2-3.4-.4-1.3-.7-2.7-.7-4.2s.2-2.9.7-4.2c.4-1.3 1.1-2.4 2-3.4.9-1 1.9-1.7 3.1-2.3 1.2-.5 2.6-.8 4.2-.8zm0 17.6c.9 0 1.7-.2 2.4-.5s1.3-.8 1.7-1.4c.5-.6.8-1.3 1.1-2.2.2-.8.4-1.7.4-2.7v-.1c0-1-.1-1.9-.4-2.7-.2-.8-.6-1.6-1.1-2.2-.5-.6-1.1-1.1-1.7-1.4-.7-.3-1.5-.5-2.4-.5s-1.7.2-2.4.5-1.3.8-1.7 1.4c-.5.6-.8 1.3-1.1 2.2-.2.8-.4 1.7-.4 2.7v.1c0 1 .1 1.9.4 2.7.2.8.6 1.6 1.1 2.2.5.6 1.1 1.1 1.7 1.4.6.3 1.4.5 2.4.5zM88.9 28 83 7h4.7l4 15.7h.1l4-15.7h4.7l-5.9 21h-5.7zm28.8-3.6c.6 0 1.2-.1 1.7-.3.5-.2 1-.4 1.4-.8.4-.4.7-.8.9-1.4.2-.6.3-1.2.3-2v-13h4.1v13.6c0 1.2-.2 2.2-.6 3.1s-1 1.7-1.8 2.4c-.7.7-1.6 1.2-2.7 1.5-1 .4-2.2.5-3.4.5-1.2 0-2.4-.2-3.4-.5-1-.4-1.9-.9-2.7-1.5-.8-.7-1.3-1.5-1.8-2.4-.4-.9-.6-2-.6-3.1V6.9h4.2v13c0 .8.1 1.4.3 2 .2.6.5 1 .9 1.4.4.4.8.6 1.4.8.6.2 1.1.3 1.8.3zm13-17.4h4.2v9.1l7.4-9.1h5.2l-7.2 8.4L148 28h-4.9l-5.5-9.4-2.7 3V28h-4.2V7zm-27.6 16.1c-1.5 0-2.7 1.2-2.7 2.7s1.2 2.7 2.7 2.7 2.7-1.2 2.7-2.7-1.2-2.7-2.7-2.7z"></path>
        </svg>
        
      </a>
    </div>
  
    <div class="govuk-header__content">
    
      
      <a href="/" class="govuk-header__link govuk-header__service-name">
        Flood map for planning
      </a>
      
    
    
    </div>
  
  </div>
</header>



<div class="govuk-phase-banner govuk-width-container">
  <p class="govuk-phase-banner__content">
    <strong class="govuk-tag govuk-phase-banner__content__tag">
      Beta
    </strong>
    <span class="govuk-phase-banner__text">
      This is a new service. Help us improve it and <a class="govuk-link" href="/feedback">give your feedback</a>.
    </span>
  </p>
</div>




    
      <div class="govuk-width-container">
        
  <a href="javascript:history.back()" class="govuk-back-link">Back</a>


        <main class="govuk-main-wrapper" id="main-content">
          
  <div class="govuk-grid-row">
    <div class="govuk-grid-column-three-quarters">
      <h1 class="govuk-heading-xl">
        Next steps for your planning application
      </h1>
      <h3 class="govuk-heading-m">
        Decide what you need for your planning application
      </h3>
      <p class="govuk-body">
        Contact your local planning authority to check their requirements.
      </p>
      <p class="govuk-body">
        Your local planning authority is Bath and North East Somerset
      </p>
      <p class="govuk-body">
        Get a Flood Risk Assessment (FRA). You will normally need to pay a flood risk specialist to carry it out.
      </p>
      <p class="govuk-body">
        For developments in flood zone 3 your FRA should include an assessment of all sources of
        flooding and <a class="govuk-link" href="https://www.gov.uk/guidance/flood-risk-assessments-climate-change-allowances">take into account climate change allowances</a>.
      </p>
      <p class="govuk-body">
        Find out <a class="govuk-link" href="https://www.gov.uk/guidance/flood-risk-assessment-for-planning-applications">how to do an assessment</a>.
      </p>
      <p class="govuk-body">
        Find out more about <a class="govuk-link" href="/flood-zone-results-explained">flood zones and what they mean</a>
      </p>
      
      <p class="govuk-body">
        When using the surface water map on the
        <a class="govuk-link" href="https://check-long-term-flood-risk.service.gov.uk/map?easting=9323.5&northing=1323.5&map=SurfaceWater">
          check your long term flood risk service
        </a>
        the following considerations apply:
      </p>

      <ul class="govuk-list govuk-list--bullet">
        <li>
          surface water extents are suitable for use in planning
        </li>
        <li>
          surface water climate change scenarios may help to inform risk assessments, 
          but the available data fall short of what is required to assess planned development 
        </li>
        <li>
          surface water depth information should not be used for planning purposes
        </li>
      </ul>

      <p class="govuk-body">
        To find out about other factors that might affect the flood risk of this location, you should also check:
      </p>

      <ul class="govuk-list govuk-list--bullet">
        <li>
          <a class="govuk-link" href="https://check-long-term-flood-risk.service.gov.uk/map?easting=9323.5&northing=1323.5&map=Reservoirs">
            reservoir flood risk
          </a>
        </li>
        <li>
          groundwater flood risk - you could use the
          <a class="govuk-link" href="https://www.bgs.ac.uk/datasets/groundwater-flooding/">
            British Geological Survey groundwater flooding data
          </a>,
          <a class="govuk-link" href="https://www.gov.uk/government/collections/groundwater-current-status-and-flood-risk">
            groundwater: current status and flood risk
          </a>
          and the guide on
          <a class="govuk-link" href="https://www.gov.uk/guidance/mining-and-groundwater-constraints-for-development">
            mining and groundwater constraints for development
          </a>
          - further information may be available from the lead local flood authority (LLFA) and your
          local planning authority's strategic flood risk assessment (SFRA)
        </li>
        <li>
          your local planning authority's strategic flood risk assessment (SFRA), which includes future flood risk.
        </li>
      </ul>

      <h3 class="govuk-heading-m">
        Other data you may need
      </h3>

      <p class="govuk-body">You will also need to assess <a
          href="https://www.gov.uk/guidance/flood-risk-and-coastal-change#para41">residual
          risk</a> from flood defence breach in this location.
          If available, we will provide breach hazard mapping data to help you do this. 
      </p>

      <h3 class="govuk-heading-m">
        Get help
      </h3>

      <p class="govuk-body">
        For help deciding what flood risk information you need, 
        email the Environment Agency team in Wessex at
        <a class="govuk-link" href="mailto:wessexenquiries@environment-agency.gov.uk">wessexenquiries@environment-agency.gov.uk</a>
      </p>

      <h3 class="govuk-heading-m">
        Download a flood map for this location
      </h3>

      
  <details class="govuk-details govuk-!-margin-bottom-1" data-module="govuk-details"
    data-journey-click="Flood-Zone-Results:DETAIL-CLICK:Add-A-Reference">
    <summary class="govuk-details__summary">
      <span class="govuk-details__summary-text">
        Add a reference to the flood map and set the scale
      </span>
    </summary>
    <div class="govuk-details__text">
      <form class="form" id="product-1-form" method="POST" action="product-1">
        <input name="polygon" type="hidden" value="[[9323,1323],[9323,1324],[9324,1324],[9324,1323],[9323,1323]]" />
        <input name="isRiskAdminArea" type="hidden" value="false" />
        <input name="floodZone" type="hidden" value="3" />

          <div class="govuk-form-group">
            <h3 class="govuk-label-wrapper">
              <label class="govuk-label--m" for="reference">
                Add a reference
              </label>
              <span class="govuk-hint govuk-hint--block">
                Optional. This is chosen by you to help you find the report
                later and should be less than 25 characters.
              </span>
            </h3>
            <input class="govuk-input form-control govuk-input--width-20" id="reference" name="reference" type="text" maxlength="25" />
          </div>

          <div class="govuk-form-group">
            <h3 class="govuk-label-wrapper">
              <label class="govuk-label--m" for="scale"> Scale </label>
              <span class="govuk-hint govuk-hint--block">
                Select the scale of the map shown in the report
              </span>
            </h3>
            <select class="govuk-select" id="scale" name="scale">
              <option value="2500">1:2500</option>
              <option value="10000">1:10000</option>
              <option value="25000">1:25000</option>
              <option value="50000">1:50000</option>
            </select>
          </div>
        </form>
      </div>
    </details>
    <button href="#" form="product-1-form" id="product-1-button" type="submit" class="govuk-button govuk-button--secondary" draggable="false">
      Download flood map for this location (PDF)
    </button>
  

      <h3 class="govuk-heading-m">
        Order flood risk data for rivers and the sea
      </h3>

      
  <p class="govuk-body" data-testid="order-product4-email">
    To order flood risk data for this site, contact the Environment Agency team in Wessex at
    <a class="govuk-link" href="mailto:wessexenquiries@environment-agency.gov.uk">wessexenquiries@environment-agency.gov.uk</a>
  </p>
  <p class="govuk-body">Your email should say that you are ordering flood risk data and include:</p>
  <ul class="govuk-list govuk-list--bullet">
    <li>the address</li>
    <li>a map showing the site boundary</li>
  </ul>
  
    <p class="govuk-body">We aim to email you the data within 20 working days.</p>
    <p class="govuk-body">Depending on the information that's available, your flood risk data could include:</p>
    <ul class="govuk-list govuk-list--bullet">
      <li>a flood zone map (flood map for planning)</li>
      <li>past flood outlines</li>
      <li>relevant modelled flood levels and extents</li>
      <li>flood defence locations and attributes</li>
      <li>flood defence breach hazard information.</li>
    </ul>
  

    </div>
  </div>

        </main>
      </div>
    

    
  

<footer class="govuk-footer">
  <div class="govuk-width-container">
    
    <div class="govuk-footer__meta">
      <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
        
        <h2 class="govuk-visually-hidden">Support links</h2>
        
        <ul class="govuk-footer__inline-list">
        
          <li class="govuk-footer__inline-list-item">
            <a class="govuk-footer__link" href="/cookies">
              Cookies
            </a>
          </li>
        
          <li class="govuk-footer__inline-list-item">
            <a class="govuk-footer__link" href="/accessibility-statement">
              Accessibility
            </a>
          </li>
        
          <li class="govuk-footer__inline-list-item">
            <a class="govuk-footer__link" href="/terms-and-conditions">
              Terms and conditions
            </a>
          </li>
        
          <li class="govuk-footer__inline-list-item">
            <a class="govuk-footer__link" href="/privacy-notice">
              Privacy notice
            </a>
          </li>
        
        </ul>
        
        
        <div class="govuk-footer__meta-custom">
          <p class="govuk-body-s">
              Built by the
              <a href="https://www.gov.uk/government/organisations/environment-agency">Environment Agency</a>
            </p>
            <p class="govuk-body-s" style="max-width: 70ch;">
              © Crown copyright and database rights 2025
              <a href = "https://www.ordnancesurvey.co.uk/">Ordnance Survey(OS)</a>
              AC0000807064. Use of the address and mapping data is subject to the
                <a href="/os-terms">Ordnance Survey terms and conditions</a>.
            </p>
        </div>
        
        
        <svg
          aria-hidden="true"
          focusable="false"
          class="govuk-footer__licence-logo"
          xmlns="http://www.w3.org/2000/svg"
          viewBox="0 0 483.2 195.7"
          height="17"
          width="41"
        >
          <path
            fill="currentColor"
            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
          />
        </svg>
        <span class="govuk-footer__licence-description">
        
          All content is available under the
          <a
            class="govuk-footer__link"
            href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
            rel="license"
          >Open Government Licence v3.0</a>, except where otherwise stated
        
        </span>
      </div>
      <div class="govuk-footer__meta-item">
        <a
          class="govuk-footer__link govuk-footer__copyright-logo"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
        >
        
          © Crown copyright
        
        </a>
      </div>
    </div>
  </div>
</footer>




    
  
  
  <script src="/assets/core.js"></script>
  <script type="module">
    import { initAll } from '/assets/govuk-frontend.min.js'
    initAll()
  </script>
  <script type="text/javascript">
    const analyticsAccount = 'replace_this'
    const analyticsAccepted = Boolean(document.cookie.match('GA=Accept'))

    if (analyticsAccount && analyticsAccepted) {
      const script = document.createElement('script')
      script.src = \`https://www.googletagmanager.com/gtm.js?id=\${analyticsAccount}\`
      script.onload = () => {
        window.dataLayer = window.dataLayer || []
        function gtag () { window.dataLayer.push(arguments) }
        gtag('consent', 'default', {
          ad_storage: 'granted',
          ad_personalization: 'granted',
          ad_user_data: 'granted',
          analytics_storage: 'granted'
        })
        window.dataLayer.push({
          'gtm.start': new Date().getTime(),
          event: 'gtm.js'
        })
      }
      document.body.appendChild(script)
    }
  </script>

  <script src="/assets/product-1-spinner.js"></script>

  </body>
</html>
"
`;
